--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=98737690b3b712d3e40c0b027c144595
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@localhost:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=sendmail://default
+###< symfony/mailer ###
